02-cluster/samples/ingress-sample-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      nodePort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-express-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: eks-express-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:760023434898:certificate/fcd881c0-8a30-46e7-98b4-4895c0b1329d
    external-dns.alpha.kubernetes.io/hostname: eks.cloudrenandias.com.br
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - eks.cloudrenandias.com.br
  rules:
  - host: eks.cloudrenandias.com.br   # ← única mudança
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
